# MiniTrinityCore

./: CMakeLists.txt
docs/: 02-对象系统.md
engine/entity/: CMakeLists.txt
engine/entity/include/: Creature.h  Player.h  Unit.h  WorldObject.h
engine/entity/src/: Creature.cpp  Object.cpp  Player.cpp  Unit.cpp  WorldObject.cpp
engine/world/: CMakeLists.txt
engine/world/include/world/: World.h
engine/world/src/: World.cpp
include/entity/: Creature.h  Object.h  Player.h  Unit.h  WorldObject.h
include/world/: GuidGenerator.h  World.h
src/: CMakeLists.txt  main.cpp
src/entity/: Creature.cpp  Object.cpp  Player.cpp  Unit.cpp  WorldObject.cpp
src/world/: World.cpp
